// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create CV Notification Rule should render 1`] = `
<div>
  <div
    class="createNotification"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            cv.admin.notifications.create.details
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            cv.admin.notifications.create.method
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            conditions
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 60%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            cv.admin.notifications.create.stepOne.heading
          </p>
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main formBody"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer TextInput--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                            tabindex="0"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="createCvNotification_name"
                        >
                          cv.admin.notifications.create.stepOne.name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group"
                    data-id="notificationSettingType-1"
                  >
                    <label
                      class="bp3-label"
                      for="notificationSettingType"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="createCvNotification_notificationSettingType"
                      >
                        cv.admin.notifications.create.type
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="notificationSettingType"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Next
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create CV Notification Rule should render 2`] = `
<div>
  <div
    class="createNotification"
  >
    <div
      class="StepWizard--main StepWizard--navBar"
    >
      <div
        class="StepWizard--navBarList"
      >
        <div
          class="StepWizard--navStep StepWizard--activeStep"
        >
          <span
            class="StepWizard--number"
          >
            1
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            cv.admin.notifications.create.details
          </p>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            2
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            cv.admin.notifications.create.method
          </p>
        </div>
        <div
          class="StepWizard--navStep"
        >
          <span
            class="StepWizard--number"
          >
            3
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
            style="--text-line-clamp: 2; width: 240px;"
          >
            conditions
          </p>
        </div>
      </div>
      <div
        class="StepWizard--stepDetails"
      >
         
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 60%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-black"
          >
            cv.admin.notifications.create.stepOne.heading
          </p>
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="StyledProps--font StyledProps--main formBody"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer TextInput--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text InputWithIdentifier--idValue"
                            tabindex="0"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            >
                              dummy_name
                            </span>
                          </div>
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="createCvNotification_name"
                        >
                          cv.admin.notifications.create.stepOne.name
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value="dummy name"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="bp3-form-group bp3-intent-danger"
                    data-id="notificationSettingType-1"
                  >
                    <label
                      class="bp3-label"
                      for="notificationSettingType"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="createCvNotification_notificationSettingType"
                      >
                        cv.admin.notifications.create.type
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-intent-danger"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="notificationSettingType"
                              placeholder="Search..."
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                                icon="caret-down"
                              >
                                <svg
                                  data-icon="caret-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    caret-down
                                  </desc>
                                  <path
                                    d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        cv.admin.notifications.create.validation.type
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Next
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
